--- a/XS3310-II23_1.html
+++ b/XS3310-II23_1.html
@@ -4,8 +4,8 @@
     <title>XS3310 Teoría Estadística</title>
     <meta charset="utf-8" />
     <meta name="author" content="Prof. Shu Wei Chou Chen" />
-    <script src="XS3310-I23_1_files/header-attrs/header-attrs.js"></script>
-    <link href="XS3310-I23_1_files/remark-css/default.css" rel="stylesheet" />
+    <script src="XS3310-II23_1_files/header-attrs/header-attrs.js"></script>
+    <link href="XS3310-II23_1_files/remark-css/default.css" rel="stylesheet" />
     <link rel="stylesheet" href="text_color.css" type="text/css" />
   </head>
   <body>
@@ -34,15 +34,12 @@ class: center, middle, inverse, title-slide
 
 
 
-
----
-
 ### Información importante
 
 
 1. [Mediación Virtual](https://mv1.mediacionvirtual.ucr.ac.cr/course/view.php?id=32768)
 2. [Programa del curso](https://shuwei325.github.io/XS3310-II23/Programa-XS3310.pdf)
-3. [Llenar el formulario](https://forms.gle/GwQ1YXYzgeL4ur1W6)
+3. [Llenar el formulario](https://forms.gle/2Ct3dS7su2N4FcUBA)
 
 
 ###Reglamentación
