--- a/XS3310-II23_1.html
+++ b/XS3310-II23_1.html
@@ -128,10 +128,10 @@ Una variable aleatoria (v.a.) `\({\displaystyle X}\)` es una función real defin
 
 - **Valor esperado**
 
-`$$\mu=E(Y)=\sum\limits_y y \cdot p(y)$$`
+`$$\mu=E(Y)=\sum\limits_y y \cdot p(y).$$`
 - **Variancia**
 
-`$$Var(Y)=E\left[(Y-\mu)^2\right]=\sum\limits_y (y-\mu)^2$$`
+`$$Var(Y)=E\left[(Y-\mu)^2\right]=\sum\limits_y (y-\mu)^2\cdot p(y).$$`
 
 ---
 ### Ejemplo con la distribución binomial
