--- a/XS3310-II23_1.html
+++ b/XS3310-II23_1.html
@@ -40,7 +40,7 @@ class: center, middle, inverse, title-slide
 1. [Mediación Virtual](https://mv1.mediacionvirtual.ucr.ac.cr/course/view.php?id=32768)
 2. [Programa del curso](https://shuwei325.github.io/XS3310-II23/Programa-XS3310.pdf)
 3. [Llenar el formulario](https://forms.gle/2Ct3dS7su2N4FcUBA)
-
+4. [Slack](https://join.slack.com/t/xs3310-ii23/shared_invite/zt-20vijuo2v-aa0ZCR~BysROfNQ7kYSQ9A)
 
 ###Reglamentación
 
