--- a/XS3310-II23_5.html
+++ b/XS3310-II23_5.html
@@ -343,28 +343,12 @@ f(y|\theta)= \left\lbrace
 $$
 Muestre que `\(Y_{(n)}=max \{ X_1 ,...,X_n \}\)` es suficiente para `\(\theta\)`.
 
-
-
-
-
-
 ---
 
-# Ejercicios
+### Ejercicio 7.9 de la sección 7.9 de DeGroot (Rao-Blackwell).
 
-### ¿Por qué demostrar que un estimador es EIVM es importante?
+Suponga que `\(X_1, . . . , X_n\)` forman una secuencia de `\(n\)` Bernoulli ensayos para los cuales la probabilidad `\(p\)` de éxito en cualquier prueba dada es desconocida (0 ≤ p ≤ 1), y sea `\(T = \sum_{i=1}^n X_i\)`. Determine la forma del estimador `\(E(X_1|T)\)`.
 
-Revisar los ejemplo 9.6 - 9.9 de Mendenhall
-
-### Práctica 9.37 - 9.68 de Mendenhall.
-
-
----
-class: center, middle
-
-# ¿Qué discutimos hoy?
-
-Suficiencia, técnicas para encontrar estimadores suficientes. Propiedades de los estimadores puntuales: **completitud**. Teorema de Rao-Blackwell, Teorema de Lehmann-Scheffé, EIVM.
 
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
